ADD_SUBDIRECTORY( polynesian ) 
ADD_SUBDIRECTORY( western ) 
ADD_SUBDIRECTORY( chinese ) 
ADD_SUBDIRECTORY( egyptian ) 
ADD_SUBDIRECTORY( korean ) 
ADD_SUBDIRECTORY( navajo ) 
ADD_SUBDIRECTORY( lakota ) 
ADD_SUBDIRECTORY( inuit ) 


########### install files ###############

INSTALL_FILES( /share/${PACKAGE}/data/sky_cultures FILES  )

